[gd_scene load_steps=4 format=3 uid="uid://n14tdx0w3xc7"]

[ext_resource type="Script" path="res://scripts/pickup_area.gd" id="1_h2qrc"]
[ext_resource type="FontFile" uid="uid://cqu1lrccnm6tl" path="res://assets/fonts/monogram.ttf" id="2_j4kpu"]
[ext_resource type="Texture2D" uid="uid://ddx1b13b0vgq1" path="res://assets/pickup_bubble.png" id="3_mmi05"]

[node name="PickupZone" type="Area2D"]
position = Vector2(43, -35)
collision_mask = 2
script = ExtResource("1_h2qrc")

[node name="PickBackground" type="Sprite2D" parent="."]
position = Vector2(-20, 35)
scale = Vector2(0.9375, 0.8125)
texture = ExtResource("3_mmi05")

[node name="PickLabel" type="Label" parent="."]
offset_left = -31.0
offset_top = 28.0
offset_right = -8.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.220333, 0.104009, 7.21961e-08, 1)
theme_override_fonts/font = ExtResource("2_j4kpu")
theme_override_font_sizes/font_size = 15
text = "Grab"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
